--- a/dash-benchmark/index.html
+++ b/dash-benchmark/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
     <head>
-        <title>Dash.js Rocks</title>
+        <title>Let's Benchmark</title>
 
         <style>
             video {
@@ -12,10 +12,8 @@
         <script type="text/javascript" src="main.js"></script>
     </head>
     <body>
-    <!--<h1>Chrome extension</h1>-->
         <div>
             <video id="dashPlayer" controls></video>
         </div>
-        <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/dashjs/2.6.3/dash.all.min.js"></script>-->
     </body>
 </html>
